[package]
name = "learning-impl"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "naive-trie"
path = "src/trie/naive.rs"

[[bin]]
name = "radix-trie"
path = "src/trie/radix.rs"

[[bin]]
name = "patricia-trie"
path = "src/trie/patricia.rs"

[[bin]]
name = "atomic-playground"
path = "src/atomics/playground.rs"

[[bin]]
name = "main"
path = "src/main.rs"

[dependencies]



