[package]
name = "learning-impl"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "naive-trie"
path = "src/trie/naive.rs"

[[bin]]
name = "radix-trie"
path = "src/trie/radix.rs"

[[bin]]
name = "patricia-trie"
path = "src/trie/patricia.rs"

[[bin]]
name = "atomic-playground"
path = "src/atomics/playground.rs"

[[bin]]
name = "channel-playground"
path = "src/channels/playground.rs"

[[bin]]
name = "runjs"
path = "src/runjs/main.rs"

[[bin]]
name = "main"
path = "src/main.rs"

[dependencies]
deno_ast = { version = "=0.48.0", features = ["transpiling"] }
deno_core = "0.352.0"
deno_error = "0.6.1"
reqwest = "0.12.20"
thiserror = "2.0.12"
tokio = { version = "1.45.1", features = ["full"] }

[build-dependencies]
deno_core = "0.352.0"
