[package]
name = "learning-impl"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1.89"
deno_ast = { version = "=0.48.0", features = ["transpiling"] }
deno_core = "0.352.0"
deno_error = "0.6.1"
eyre = "0.6.12"
futures = "0.3.31"
libp2p = {version ="0.56.0", features = ["noise", "ping", "tcp", "yamux", "tokio"]}
reqwest = "0.12.23"
thiserror = "2.0.15"
tokio = { version = "1.47.1", features = ["full"] }
tracing-subscriber = {version = "0.3.19", features = ["env-filter"]}

[dev-dependencies]
criterion = {version = "0.7.0", features = ["html_reports"]}

[build-dependencies]
deno_core = "0.352.0"


[[bench]]
name = "radix_benchmark"
harness = false

# --- data structure ---
[[bin]]
name = "naive-trie"
path = "src/trie/naive.rs"

[[bin]]
name = "radix-trie"
path = "src/trie/radix.rs"

[[bin]]
name = "patricia-trie"
path = "src/trie/patricia.rs"

# --- concurrency playground ---
[[bin]]
name = "atomic-playground"
path = "src/atomics/playground.rs"

[[bin]]
name = "event_bus"
path = "src/event_bus/main.rs"


# --- PL playground ---
[[bin]]
name = "runjs"
path = "src/runjs/main.rs"


# --- Libp2p playground ---
[[bin]]
name = "libp2p-ping"
path = "src/libp2p/ping.rs"

[[bin]]
name = "libp2p-holepunching"
path = "src/libp2p/holepunching.rs"

[[bin]]
name = "libp2p-holepunching-relay"
path = "src/libp2p/relay.rs"
